--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 %% -*- erlang -*-
-{erl_opts, [debug_info, warnings_as_errors]}.
+{erl_opts, [debug_info]}.
 {cover_enabled, true}.
 {deps, [
        ]}.
