--- a/rebar.config
+++ b/rebar.config
@@ -12,3 +12,10 @@
               unmatched_returns, race_conditions, unknown
              ]}
  ]}.
+
+{profiles, [
+  {test, [
+    {deps, [{'disable_tco', {git, "https://github.com/slepher/disable_tco.git", {branch, "master"}}}]},
+    {erl_opts, [{parse_transform, disable_tco}, nowarn_export_all]}
+  ]}
+]}.
