remove test deps

--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,6 @@
 
 {profiles, [
   {test, [
-    {deps, [{'disable_tco', {git, "https://github.com/slepher/disable_tco.git", {branch, "master"}}}]},
-    {erl_opts, [{parse_transform, disable_tco}, nowarn_export_all]}
+    {erl_opts, [nowarn_export_all]}
   ]}
 ]}.
